# hello-amaranth

./: .gitignore  LICENSE  README.md
examples/: Makefile  blinky.py
hello-bruno/: Makefile  README.md  asm.py  counter.py  pll.py  step2.py  step3-take1.py  step3.py  step3_pmod.py  step4.py  step5.py  step6.py  step7.py  step7.s  step8.py  step8.s
hello-bruno/rvi/lib/: line_parser.py  parser.py
hello-femtorv/: Cargo.toml  Makefile  README.md  build.rs  memory.x
hello-femtorv/.cargo/: config.toml
hello-femtorv/examples/: blinky.rs
hello-femtorv/src/: lib.rs
hello-icestick/: breathe.py  pmod.py
hello-lambdasoc/: Makefile  README.md
hello-lambdasoc/gateware/: blinky.py  car.py  minerva_soc.py  svd.py  top.py
hello-minerva/: Makefile  README.md
hello-minerva/minerva-hal/: Cargo.toml  memory.x  riscv32im-unknown-none-elf.json
hello-minerva/minerva-hal/.cargo/: config.toml  flash.sh
hello-minerva/minerva-hal/examples/: blinky.rs  counter.rs  oled-ssd1306.rs  oled.rs
hello-minerva/minerva-hal/src/: gpio.rs  lib.rs  spi.rs  timer.rs  uart.rs
hello-minerva/minerva-pac/: Cargo.toml
hello-minerva/minerva-pac/src/: ctrl.rs  identifier_mem.rs  interrupt.rs  leds.rs  lib.rs  oled_ctl.rs  oled_spi.rs  sdram.rs  timer0.rs  uart.rs
hello-minerva/minerva-pac/src/ctrl/: bus_errors.rs  reset.rs  scratch.rs
hello-minerva/minerva-pac/src/identifier_mem/: identifier_mem.rs
hello-minerva/minerva-pac/src/leds/: out.rs
hello-minerva/minerva-pac/svd/: minerva.svd
hello-ulx3s/: Makefile  blinky.py  blinky_pll.py  pmod.py
(+31 files in other folders)
